--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Isaac Figueroa",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -22,6 +23,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "concurrently": "^7.2.2",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
