--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "tsc",
     "start": "tsc & node .",
     "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "author": "Isaac Figueroa",
   "license": "ISC",
@@ -21,9 +28,15 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.2",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.0",
+    "@types/superagent": "^4.1.15",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.2.2",
     "prettier": "^2.7.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
